--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="[DGI]tech" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="/DGItek/nerdblog/css/main.min.3c3c186cd62e563ad6e2f00a89dbee656ab912d1d46f856b5605dd0232521e2a.css" />
+    <link rel="stylesheet" href="/nerdblog/css/main.min.3c3c186cd62e563ad6e2f00a89dbee656ab912d1d46f856b5605dd0232521e2a.css" />
 
     
     <meta name="twitter:card" content="summary"/>
@@ -18,13 +18,13 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Future Tech Author" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://github.com/DGItek/nerdblog/404.html" />
+<meta property="og:url" content="https://dgitek.github.io/nerdblog/404.html" />
 
 
   </head>
   <body>
     <header class="app-header">
-      <a href="https://github.com/DGItek/nerdblog"><img class="app-header-avatar" src="/DGItek/nerdblog/avatar.jpg" alt="[DGI]tech" /></a>
+      <a href="https://dgitek.github.io/nerdblog/"><img class="app-header-avatar" src="/nerdblog/avatar.jpg" alt="[DGI]tech" /></a>
       <span class="app-header-title">[DGI]tech&#39;s Technical Tales</span>
       <p>Future Tech Author</p>
       <div class="app-header-social">
